--- a/app/styles/mobile.scss
+++ b/app/styles/mobile.scss
@@ -765,6 +765,10 @@ $icon-font-path: '../fonts/';
       margin-top: 0;
     }
 
+    h1 {
+      font-size: 28px;
+    }
+
     .work-story-1 img {
       width: 100%;
     }
@@ -880,7 +884,7 @@ $icon-font-path: '../fonts/';
     }
 
     h1 {
-      font-size: 24px;
+      font-size: 28px;
       line-height: 110%;
       font-weight: 500;
       margin: 0.5em 0em;
@@ -971,7 +975,7 @@ $icon-font-path: '../fonts/';
     text-align: center;
 
     h1 {
-      font-size: 24px;
+      font-size: 28px;
       font-weight: 500;
       margin: 0em 0em;
     }
@@ -1031,8 +1035,8 @@ $icon-font-path: '../fonts/';
 
     h1 {
       font-size: 18px;
-      font-weight: 100;
-      font-family: "roboto-light", san-serif;
+      font-weight: 300;
+      font-family: "Oswald", san-serif;
       margin: 0 1em;
     }
 
@@ -1268,15 +1272,19 @@ $icon-font-path: '../fonts/';
   //-------------------------------------
   // section-workshop
   //-------------------------------------
-  #subsection-workshop-detail {
+  .popup {
     position: fixed;
     top: 0px;
     left: 0px;
     width: 100%;
     height: 100vh;
-    padding: 0em 0em 4em;
+    margin: auto auto;
+  }
+
+  #subsection-workshop-detail {
     display: none;
-    overflow: scroll;
+    overflow-x: hidden;
+    overflow-y: scroll;
 
     #workshop-image {
       width: 450px;
@@ -1345,13 +1353,7 @@ $icon-font-path: '../fonts/';
   \*======================================================*/
   #subsection-carousel {
     background-color: #081325;
-    position: fixed;
     display: none;
-    margin: auto auto;
-    height: 100vh;
-    top: 0px;
-    left: 0px;
-    width: 100vw;
 
     .item {
     }
