Add parallax snap to

--- a/app/styles/mobile.scss
+++ b/app/styles/mobile.scss
@@ -543,6 +543,7 @@ $icon-font-path: '../fonts/';
 
   #section-contact-child {
     text-align: left;
+    opacity: 0;
   }
 
   #section-contact-flex {
