Remove underlines in Story sections

--- a/app/styles/mobile.scss
+++ b/app/styles/mobile.scss
@@ -675,6 +675,7 @@ $icon-font-path: '../fonts/';
         height: 3em;
         a {
           color: white;
+          text-decoration: none;
         }
         img {
           height: 100%;
