--- a/app/styles/mobile.scss
+++ b/app/styles/mobile.scss
@@ -30,16 +30,6 @@ $icon-font-path: '../fonts/';
     padding: 0;
     margin: 0;
     opacity: 0;
-
-    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#010105+0,090919+76 */
-    background: #010105; /* Old browsers */
-    background: -moz-linear-gradient(top,  #010105 0%, #090919 51%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#010105), color-stop(51%,#090919)); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top,  #010105 0%,#090919 51%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top,  #010105 0%,#090919 51%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(top,  #010105 0%,#090919 51%); /* IE10+ */
-    background: linear-gradient(to bottom,  #010105 0%,#090919 51%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#010105', endColorstr='#090919',GradientType=0 ); /* IE6-9 */
   }
 
   .body-fadein {
@@ -184,6 +174,26 @@ $icon-font-path: '../fonts/';
     height: 100%;
     left: 0px;
     top: 0px;
+  }
+
+  #gradient {
+    position: absolute;
+    width: 100%;
+    top: 0px;
+    left: 0px;
+    height: calc(1200 * 7px);
+
+    z-index: -4;
+
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#010105+0,090919+76 */
+    background: #010105; /* Old browsers */
+    background: -moz-linear-gradient(top,  #010105 0%, #090919 51%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#010105), color-stop(51%,#090919)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top,  #010105 0%,#090919 51%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top,  #010105 0%,#090919 51%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top,  #010105 0%,#090919 51%); /* IE10+ */
+    background: linear-gradient(to bottom,  #010105 0%,#090919 51%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#010105', endColorstr='#090919',GradientType=0 ); /* IE6-9 */
   }
 
   /*======================================================*\
