Change headings for menu items

--- a/app/styles/desktop.scss
+++ b/app/styles/desktop.scss
@@ -585,12 +585,18 @@ $icon-font-path: '../fonts/';
     position: absolute;
     left: 0;
     top: 200px;
+    margin: 1em;
+    width: 190px;
+    font-size: 18px;
   }
 
   #btn-telling-it {
     position: absolute;
     right: 0;
     top: 200px;
+    margin: 1em;
+    width: 190px;
+    font-size: 18px;
   }
 
   #mountains-image, #campfire-image {
