--- a/app/styles/mobile.scss
+++ b/app/styles/mobile.scss
@@ -440,6 +440,7 @@ $icon-font-path: '../fonts/';
     display: inline-block;
     width: 100%;
     border-radius: 5px;
+
     img {
       border: 1px solid white;
       display: block;
@@ -447,21 +448,30 @@ $icon-font-path: '../fonts/';
       margin: auto;
       border-radius: 5px;
     }
+
     i {
       color: white;
-      font-size: 0.5rem;
+      font-size: 11px;
       position: absolute;
-      top: calc(50% - 0.75rem);
-      left: calc(50% - 1.66rem);
+      top: 50%;
+      left: 50%;
+      width: 45px;
+      height: 40px;
+      margin-left: -25px;
+      margin-top: -25px;
       background: rgba(0, 0, 0, .6);
-      padding: 0.5rem 1.5rem;
-      border-radius: .5rem;
+      border-radius: 25px;
+      padding-top:10px;
+      padding-left:5px;
+      text-align: center;
     }
+
     &:hover {
       i {
         background: #00ADEF;
       }
     }
+
     &:visited, &:focus, &:active {
       outline: none;
     }
