--- a/app/styles/mobile.scss
+++ b/app/styles/mobile.scss
@@ -155,6 +155,28 @@ $icon-font-path: '../fonts/';
     position: relative;
   }
 
+  #landscape {
+    display: none;
+  }
+
+  /*======================================================*\
+   * Landscape Rotate Screen
+  \*======================================================*/
+  @media only screen and (max-width: 768px) and (orientation: landscape) {
+    #landscape {
+      display: block;
+      position: fixed;
+      z-index: 9001;
+      width: 100%;
+      height: 100%;
+      top: 0px;
+      left: 0px;
+      background: #101040;
+      text-align: center;
+      font-size: 42px;
+    }
+  }
+
   /*======================================================*\
    * Canvas Overlay
   \*======================================================*/
