--- a/app/styles/desktop.scss
+++ b/app/styles/desktop.scss
@@ -93,6 +93,12 @@ $icon-font-path: '../fonts/';
 
     i {
       font-size: 2rem;
+      width: 45px;
+      height: 40px;
+      padding-top:10px;
+      padding-left:5px;
+      margin-left: -25px;
+      margin-top: -25px;
     }
 
     &:hover {
