--- a/app/styles/mobile.scss
+++ b/app/styles/mobile.scss
@@ -468,7 +468,6 @@ $icon-font-path: '../fonts/';
       display: block;
       width: 100%;
       margin: auto;
-      border-radius: 5px;
     }
 
     i {
@@ -805,7 +804,9 @@ $icon-font-path: '../fonts/';
   }
 
   #section-work-flex-mobile {
-    padding: 0em 1em;
+    .work-header {
+      padding: 1em;
+    }
 
     h2 {
       margin-top: 0;
@@ -821,11 +822,12 @@ $icon-font-path: '../fonts/';
 
     .work-stories {
       display: flex;
-      flex-direction: column;
-      margin-bottom: 1em;
+      flex-direction: row;
+      justify-content: space-between;
+      margin: 1em;
 
       .work-story-2, .work-story-3 {
-        width: 100%;
+        width: 47%;
       }
 
       .work-story-2 iframe, .work-story-3 iframe {
@@ -839,61 +841,15 @@ $icon-font-path: '../fonts/';
     }
 
     .quote-yellow {
-      font-size: 20px;
+      font-size: 16px;
     }
 
-    @media screen and (max-height: 580px) {
-      .work-story-1 {
-        float: left;
-        margin-right: 1em;
-      }
-
-      .work-story-1 img {
-        max-width: 191px;
-      }
-
-      .work-btn-wrapper {
-        margin: auto;
-        float: right;
-      }
-
-      .work-quote {
-        clear: both;
-        width: 100%;
-        padding-top: 2em;
-      }
-
-      .quote-yellow {
-        font-size: 15px;
-      }
+    .work-btn-wrapper {
+      margin: 1em;
     }
 
-    @media only screen and (max-height: 580px) and (orientation: landscape) {
-      h1 {
-        display: inline;
-      }
-      h2 {
-        display: inline-block;
-        margin-right: 2em;
-      }
-      .work-story-1 {
-        width: 33%;
-        margin-right: 0.5rem;
-        img {
-          width: 95%;
-        }
-      }
-      .work-stories {
-        width: 65%;
-      }
-      .work-quote {
-        clear: none;
-        width: 66%;
-        padding-top: 1rem;
-      }
-      .work-btn-wrapper {
-        margin-right: 2%;
-      }
+    .work-quote {
+      margin: 1em;
     }
   }
 
