--- a/app/styles/mobile.scss
+++ b/app/styles/mobile.scss
@@ -764,7 +764,7 @@ $icon-font-path: '../fonts/';
 
     .workshop-2 {
       float: left;
-      padding: 1em;
+      width: 100%;
 
       img {
         margin: 1em auto;
@@ -818,6 +818,8 @@ $icon-font-path: '../fonts/';
 
     .work-story-1 img {
       width: 100%;
+      max-height: 250px;
+      object-fit: cover;
     }
 
     .work-stories {
