--- a/app/styles/desktop.scss
+++ b/app/styles/desktop.scss
@@ -61,6 +61,7 @@ $icon-font-path: '../fonts/';
     a, a:hover, a:visited {
       color: white;
       text-decoration: none;
+      outline: none;
     }
 
     ul {
