--- a/app/styles/mobile.scss
+++ b/app/styles/mobile.scss
@@ -585,6 +585,7 @@ $icon-font-path: '../fonts/';
     top: 1000px;
     opacity: 0;
     width: 100%;
+    display: none;
     -webkit-transform-origin: 50% top;
     -moz-transform-origin: 50% top;
     -ms-transform-origin: 50% top;
