Default section top to -100%

--- a/app/styles/mobile.scss
+++ b/app/styles/mobile.scss
@@ -582,7 +582,7 @@ $icon-font-path: '../fonts/';
 
   .section-child {
     position: fixed;
-    top: 1000px;
+    top: -100%;
     opacity: 0;
     width: 100%;
     display: none;
