Reduce Work section title margins to better fit mobile screens

--- a/app/styles/mobile.scss
+++ b/app/styles/mobile.scss
@@ -829,11 +829,12 @@ $icon-font-path: '../fonts/';
     }
 
     h2 {
-      margin-top: 0;
+      margin: 0px;
     }
 
     h1 {
       font-size: 28px;
+      margin: 0px;
     }
 
     .work-story-1 img {
