--- a/app/styles/desktop.scss
+++ b/app/styles/desktop.scss
@@ -622,10 +622,67 @@ $icon-font-path: '../fonts/';
 
   .subsection-child {
     margin-top: 0px;
+    h1 {
+      font-size: 52px;
+      margin: auto;
+    }
+    .quote-blue {
+      font-size: 32px;
+      margin: auto;
+    }
 
     .icon {
       width: 75px;
       margin: 2em;
+    }
+  }
+  #subsection-video {
+    h1 {
+      max-width: 11em;
+    }
+    .quote-blue {
+      max-width: 12em;
+    }
+  }
+  #subsection-branding {
+    h1 {
+      max-width: 8em;
+    }
+    .quote-blue {
+      max-width: 16em;
+    }
+  }
+  #subsection-music {
+    h1 {
+      max-width: 9em;
+    }
+  }
+  #subsection-design {
+    h1 {
+      max-width: 8em;
+    }
+  }
+  #subsection-social {
+    h1 {
+      max-width: 10em;
+    }
+    .quote-blue {
+      max-width: 16em;
+    }
+    .main-image {
+      max-width: unset;
+      max-height: 150px;
+      width: 100%;
+    }
+  }
+  #subsection-content {
+    .quote-blue {
+      max-width: 16em;
+    }
+  }
+  #subsection-broadcast {
+    .quote-blue {
+      max-width: 12em;
     }
   }
 
