--- a/app/styles/mobile.scss
+++ b/app/styles/mobile.scss
@@ -164,16 +164,27 @@ $icon-font-path: '../fonts/';
   \*======================================================*/
   @media only screen and (max-width: 768px) and (orientation: landscape) {
     #landscape {
+      font-family: "Oswald", san-serif;
+      font-weight: 100;
       display: block;
       position: fixed;
       z-index: 9001;
-      width: 100%;
-      height: 100%;
+      width: 80%;
+      height: 80%;
       top: 0px;
       left: 0px;
       background: #101040;
       text-align: center;
-      font-size: 42px;
+      font-size: 12vh;
+      padding: 10%;
+
+      img {
+        width: 40%;
+      }
+    }
+
+    #sections {
+      display: none;
     }
   }
 
