Add rotating moon

--- a/app/styles/desktop.scss
+++ b/app/styles/desktop.scss
@@ -37,11 +37,13 @@ $icon-font-path: '../fonts/';
   /*======================================================*\
    * Scroll up
   \*======================================================*/
-  .scroll-up img {
-    width: 120px;
-    height: 120px;
+  .scroll-up {
+    margin-left: -50px;
   }
 
+  .scroll-up img {
+    width: 100px;
+  }
 
   /*======================================================*\
    * Menu
