Add padding to the bottom of video section work quote

--- a/app/styles/desktop.scss
+++ b/app/styles/desktop.scss
@@ -375,6 +375,7 @@ $icon-font-path: '../fonts/';
       .work-quote {
         flex: 1;
         padding: 1em;
+        padding-bottom: 2em;
         .quote {
           position: relative;
           text-align: center;
