Fix Mac white background bug on overscroll

--- a/app/styles/mobile.scss
+++ b/app/styles/mobile.scss
@@ -23,7 +23,8 @@ $icon-font-path: '../fonts/';
 
   body {
     color: white;
-
+    background-color: black;
+    
     font-family: roboto-light;
     font-size: 12px;
 
